# school-mining-scraper

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  deny.toml  justfile  state.json
src/: data.rs  main.rs
