[package]
name = "school-mining-scraper"
version = "0.1.0"
edition = "2021"
authors = ["Faun Alyx Krambrich <faun@fauns.space>"]
description = "Ein Programm, das die Stundenpläne von Untis ausliest und speichert, um eine spätere Analyse zu ermöglichen."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
untis = {git="https://github.com/luleyleo/untis-rs.git"}
chrono = {version="0.4",features=["rkyv","serde"]}
dotenvy = "0.15.7"
postgres = "0.19.7"
rkyv = { version = "0.7.42", features = ["archive_le"] }
sha2 = "0.10.8"
anyhow = "1.0.75"
serde = { version = "1.0.189", features = ["serde_derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.22", features = ["blocking"] }


[profile.release]
opt-level = 3
lto = 'thin'  
codegen-units = 1 
